# doc-sync

./: Cargo.toml  LICENSE  README.md
src/: doc_comment.pest  doc_comment_parser.rs  main.rs
src/edit_docs/: code_blocks.rs  mod.rs
src/from_markdown/: item_info.rs  item_path.rs  mod.rs  module_path.rs  supported_item.rs
src/from_markdown/update_docs/: mod.rs  resolve_item.rs  update_docs_for_span.rs
src/to_markdown/: handle_item.rs  item_enum_ext.rs  iterate_children.rs  mod.rs
